# eth_hackathon

./: README.md  big_notebook.ipynb  circuit1.ipynb  file_management.py  main.py  multiply_U3.py  numerical_optimization.py  pyproject.toml  simplify_circuit.ipynb  some_sympy.ipynb  some_sympy.py  starting_point_2.ipynb  starting_point_2.ipynb:Zone.Identifier  temp.py
assets/: GHZ_tutorial_v3.ipynb  import_and_process_tutorial.ipynb
assets/baseline/: tempp.py
storage/: result_circuit.qasm  tempcirc.qasm
