[project]
name = "eth-qhack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bloqade>=0.24.1",
    "ipykernel>=6.29.5",
    "networkx>=3.4.2",
    "pylatexenc>=2.10",
    "qiskit>=2.0.0",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
